# optimisation-d-une-ligne-d-assemblage-fc-opentowork

./: CMakeLists.txt  README.md  afficher_exclusion.c  creation_station.c  header.h  lire_exclusion.c  main.c
DoubleContraintes/: calcul_exclusion_temps.c  calcul_precedence_exclusions.c
Exclusion/: afficher_station_exclusion.c  ajouter_operation_station_exclusion.c  calculer_ordre_exclusion.c  creation_station.c  est_compatible_avec_station_exclusion.c  est_dans_le_tableau_exclusion.c
General/: creer_pile.c  depiler.c  empiler.c  lire_fichier.c  seek.c  tri_tab_aretes.c  tri_tab_sommets.c
MultiContraintes/: calcul_multicontraintes.c  comparaison_sommets.c  confirmation_ajout.c
Precedences/: ajouter_station.c  calcul_precedences.c  creer_station.c  recherche_sommet_suivant.c  recherche_sommets_initiaux.c  recherche_temps_operation.c
